Archive2/29/a739650f9825eb/output
+ clang++ --std=gnu++11 main.cpp
main.cpp:31:5: error: no matching constructor for initialization of 'Bar'
    Bar{{&z, &a}};
    ^  ~~~~~~~~~~
main.cpp:14:8: note: candidate constructor (the implicit copy constructor) not viable: cannot convert initializer list argument to 'const Bar'
struct Bar
       ^
main.cpp:14:8: note: candidate constructor (the implicit move constructor) not viable: cannot convert initializer list argument to 'Bar'
struct Bar
       ^
main.cpp:20:9: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
        Bar(Ts &&... ts)
        ^
1 error generated.
